--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -86,7 +86,7 @@ jobs:
 
       - name: Create release zip
         run: > 
-          $filesToZip = Get-Item *\bin\release\*.exe
+          $filesToZip = Get-ChildItem -Recurse -Filter *.exe | Where-Object { $_ -match 'bin\\(Debug|Release)\\[^\\]+\.exe' }
           if (Test-Path README.md) {
             $filesToZip += Get-Item README.md
           } else {
